--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -2,7 +2,7 @@
 /*
 	Gorbeh Icons
 	Created by @setarekarimi1 and @JavidIzadfar
-	Last edit on May 13, 2016
+	Last edit on May 17, 2016
 */
 
 /*
@@ -11,7 +11,12 @@ Index
 -------------------------------------------------------------------------------------------------
 
 # 1 ::::::::::::::::: Declarations
-# 2 ::::::::::::::::: Initializations
+# 2 ::::::::::::::::: Transformations
+	# 2.1 ::::::::::::::::: Sizing
+  # 2.2 ::::::::::::::::: Rotating
+  # 2.3 ::::::::::::::::: Mirroring
+  # 2.4 ::::::::::::::::: Animating
+# 3 ::::::::::::::::: Initializations
 
 =================================================================================================
 -------------------------------------------------------------------------------------------------
@@ -54,7 +59,120 @@ Index
 
 /*
 =================================================================================================
-# 2 Initializations
+# 2 Transformation
+-------------------------------------------------------------------------------------------------
+*/
+
+  /*
+  =============================================================================================
+  # 2.1 Sizing
+  ---------------------------------------------------------------------------------------------
+  */
+
+    .gorbeh.gorbeh_s1{font-size: 18px;}
+
+    .gorbeh.gorbeh_s2{font-size: 28px;}
+
+    .gorbeh.gorbeh_s3{font-size: 42px;}
+
+    .gorbeh.gorbeh_s4{font-size: 56px;}
+
+  /*
+  =============================================================================================
+  # 2.2 Rotating
+  ---------------------------------------------------------------------------------------------
+  */
+
+    .gorbeh.rotate_gorbeh_90{
+      -webkit-transform: rotate(90deg);
+         -moz-transform: rotate(90deg);
+          -ms-transform: rotate(90deg);
+           -o-transform: rotate(90deg);
+              transform: rotate(90deg);}
+
+    .gorbeh.rotate_gorbeh_180{
+      -webkit-transform: rotate(180deg);
+         -moz-transform: rotate(180deg);
+          -ms-transform: rotate(180deg);
+           -o-transform: rotate(180deg);
+              transform: rotate(180deg);}
+
+    .gorbeh.rotate_gorbeh_270{
+      -webkit-transform: rotate(270deg);
+         -moz-transform: rotate(270deg);
+          -ms-transform: rotate(270deg);
+           -o-transform: rotate(270deg);
+              transform: rotate(2700deg);}
+
+  /*
+  =============================================================================================
+  # 2.3 Mirroring
+  ---------------------------------------------------------------------------------------------
+  */
+
+    .gorbeh.mirror_gorbeh{-
+      -webkit-transform: scale(-1, 1);
+         -moz-transform: scale(-1, 1);
+          -ms-transform: scale(-1, 1);
+           -o-transform: scale(-1, 1);
+              transform: scale(-1, 1);}
+
+  /*
+  =============================================================================================
+  # 2.4 Animationg
+  ---------------------------------------------------------------------------------------------
+  */
+
+    .gorbeh.gorbeh_animation_rotation{
+      -webkit-animation-name: gorbeh_load_animation;
+         -moz-animation-name: gorbeh_load_animation;
+          -ms-animation-name: gorbeh_load_animation;
+           -o-animation-name: gorbeh_load_animation;
+              animation-name: gorbeh_load_animation;
+      -webkit-animation-duration: 1s;
+         -moz-animation-duration: 1s;
+          -ms-animation-duration: 1s;
+           -o-animation-duration: 1s;
+              animation-duration: 1s;
+      -webkit-animation-iteration-count: infinite;
+         -moz-animation-iteration-count: infinite;
+          -ms-animation-iteration-count: infinite;
+           -o-animation-iteration-count: infinite;
+              animation-iteration-count: infinite;
+      -webkit-animation-timing-function: linear;
+         -moz-animation-timing-function: linear;
+          -ms-animation-timing-function: linear;
+           -o-animation-timing-function: linear;
+              animation-timing-function: linear;}
+
+    @keyframes gorbeh_load_animation{
+        from{
+          -webkit-transform: rotate(0deg);
+             -moz-transform: rotate(0deg);
+              -ms-transform: rotate(0deg);
+               -o-transform: rotate(0deg);
+                  transform: rotate(0deg);}
+        to{
+          -webkit-transform: rotate(-360deg);
+             -moz-transform: rotate(-360deg);
+              -ms-transform: rotate(-360deg);
+               -o-transform: rotate(-360deg);
+                  transform: rotate(-360deg);}
+    }
+
+  /*
+  =============================================================================================
+  # 2.1 Sizing
+  ---------------------------------------------------------------------------------------------
+  */
+
+    .gorbeh.gorbeh_s1{font-size: 18px;}
+
+
+
+/*
+=================================================================================================
+# 3 Initializations
 -------------------------------------------------------------------------------------------------
 */
 
