--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -69,11 +69,11 @@ Index
 
     .gorbeh.gorbeh_s1{font-size: 18px;}
 
-    .gorbeh.gorbeh_s2{font-size: 28px;}
+    .gorbeh.gorbeh_s2{font-size: 24px;}
 
-    .gorbeh.gorbeh_s3{font-size: 42px;}
+    .gorbeh.gorbeh_s3{font-size: 36px;}
 
-    .gorbeh.gorbeh_s4{font-size: 56px;}
+    .gorbeh.gorbeh_s4{font-size: 48px;}
 
   /*
   =============================================================================================
@@ -81,15 +81,14 @@ Index
   ---------------------------------------------------------------------------------------------
   */
 
--    .gorbeh.gorbeh_rotate_90{
+    .gorbeh.gorbeh_rotate_90{
        -webkit-transform: rotate(90deg);
           -moz-transform: rotate(90deg);
            -ms-transform: rotate(90deg);
             -o-transform: rotate(90deg);
                transform: rotate(90deg);}
 
-
--    .gorbeh.gorbeh_rotate_180{
+    .gorbeh.gorbeh_rotate_180{
        -webkit-transform: rotate(180deg);
           -moz-transform: rotate(180deg);
            -ms-transform: rotate(180deg);
@@ -97,12 +96,12 @@ Index
                transform: rotate(180deg);}
 
 
-+    .gorbeh.gorbeh_rotate_270{
+    .gorbeh.gorbeh_rotate_270{
        -webkit-transform: rotate(270deg);
           -moz-transform: rotate(270deg);
            -ms-transform: rotate(270deg);
             -o-transform: rotate(270deg);
--              transform: rotate(270deg);}
+               transform: rotate(270deg);}
 
   /*
   =============================================================================================
@@ -110,7 +109,7 @@ Index
   ---------------------------------------------------------------------------------------------
   */
 
-    .gorbeh.mirror_gorbeh{-
+    .gorbeh.gorbeh_mirror{
       -webkit-transform: scale(-1, 1);
          -moz-transform: scale(-1, 1);
           -ms-transform: scale(-1, 1);
