Improved sizing class name

--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -1,6 +1,6 @@
 
 /*
-	Gorbeh Icons
+	Gorbeh Icons (v2.0)
 	Created by @setarekarimi and @JavidIzadfar
 */
 
@@ -71,13 +71,13 @@ Index
   ---------------------------------------------------------------------------------------------
   */
 
-    .gb.gb_s1{font-size: 18px;}
+    .gb.gb_s18{font-size: 18px;}
 
-    .gb.gb_s2{font-size: 24px;}
+    .gb.gb_s24{font-size: 24px;}
 
-    .gb.gb_s3{font-size: 36px;}
+    .gb.gb_s36{font-size: 36px;}
 
-    .gb.gb_s4{font-size: 48px;}
+    .gb.gb_s48{font-size: 48px;}
 
   /*
   =============================================================================================
