Improved rotating class name

--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -85,21 +85,21 @@ Index
   ---------------------------------------------------------------------------------------------
   */
 
-    .gb.gb_rotate_90{
+    .gb.gb_r90{
        -webkit-transform: rotate(90deg);
           -moz-transform: rotate(90deg);
            -ms-transform: rotate(90deg);
             -o-transform: rotate(90deg);
                transform: rotate(90deg);}
 
-    .gb.gb_rotate_180{
+    .gb.gb_r180{
        -webkit-transform: rotate(180deg);
           -moz-transform: rotate(180deg);
            -ms-transform: rotate(180deg);
             -o-transform: rotate(180deg);
                transform: rotate(180deg);}
 
-    .gb.gb_rotate_270{
+    .gb.gb_r270{
        -webkit-transform: rotate(270deg);
           -moz-transform: rotate(270deg);
            -ms-transform: rotate(270deg);
