Improved animation class name

--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -125,7 +125,7 @@ Index
   ---------------------------------------------------------------------------------------------
   */
 
-    .gb.gb_animate_spin{
+    .gb.gb_s{
       -webkit-animation-name: gorbeh_spin;
          -moz-animation-name: gorbeh_spin;
           -ms-animation-name: gorbeh_spin;
