--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -112,7 +112,7 @@ Index
   ---------------------------------------------------------------------------------------------
   */
 
-    .gb.gb_m{
+    .gb.gb_mirror{
       -webkit-transform: scale(-1, 1);
          -moz-transform: scale(-1, 1);
           -ms-transform: scale(-1, 1);
