Added Coloring Classes
Now you can change color of Icons directly from html, just using these
class names.

--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -15,6 +15,7 @@ Index
   # 2.2 ::::::::::::::::: Rotating
   # 2.3 ::::::::::::::::: Mirroring
   # 2.4 ::::::::::::::::: Animating
+  # 2.5 ::::::::::::::::: Coloring
 # 3 ::::::::::::::::: Initializations
 
 =================================================================================================
@@ -176,6 +177,18 @@ Index
              -o-transform: rotate(-359deg);
                 transform: rotate(-359deg);}
     }
+
+   /*
+   =============================================================================================
+   # 2.5 Coloring
+   ---------------------------------------------------------------------------------------------
+   */
+
+      .gb.gb-dark{color: rgba(0, 0, 0, 0.54);}
+      .gb.gb-dark.gb-inactive{color: rgba(0, 0, 0, 0.26);}
+
+      .gb.gb-light{color: rgba(255, 255, 255, 1);}
+      .gb.gb-light.gb-inactive{color: rgba(255, 255, 255, 0.3);}
 
 /*
 =================================================================================================
