--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -2081,7 +2081,7 @@ Index
 
   .gb.gb_weekend::before{content:'\e16b';}
 
-  .gb.gb_whatsapp::before{content:'\e1ce';}
+  .gb.gb_whatsapp::before{content:'\e1ae';}
 
   .gb.gb_whatshot::before{content:'\e80e';}
 
