--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -1653,6 +1653,8 @@ Index
 
   .gb.gb_rv_hookup::before{content:'\e642'}
 
+  .gb.gb_saman::before{content:'\e1b7'}
+
   .gb.gb_satellite::before{content:'\e562'}
 
   .gb.gb_save::before{content:'\e161'}
