--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -1409,6 +1409,8 @@ Index
 
   .gb.gb_panorama_wide_angle::before{content:'\e40f'}
 
+  .gb.gb_parsian::before{content:'\e1d9'}
+
   .gb.gb_party_mode::before{content:'\e7fa'}
 
   .gb.gb_pause::before{content:'\e034'}
