--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -1,4 +1,3 @@
-
 /*
 	Gorbeh Icons (v2.0)
 	Created by @setarekarimi and @JavidIzadfar
@@ -360,6 +359,8 @@ Index
   .gb.gb_beach_access::before{content:'\eb3e'}
 
   .gb.gb_beenhere::before{content:'\e52d'}
+
+  .gb.gb_bisphone::before{content:'\e30a'}
 
   .gb.gb_block::before{content:'\e14b'}
 
