--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -184,11 +184,11 @@ Index
    ---------------------------------------------------------------------------------------------
    */
 
-      .gb.gb-dark{color: rgba(0, 0, 0, 0.54)}
-      .gb.gb-dark.gb-inactive{color: rgba(0, 0, 0, 0.26)}
+      .gb.gb_dark{color: rgba(0, 0, 0, 0.54)}
+      .gb.gb_dark.gb_inactive{color: rgba(0, 0, 0, 0.26)}
 
-      .gb.gb-light{color: rgba(255, 255, 255, 1)}
-      .gb.gb-light.gb-inactive{color: rgba(255, 255, 255, 0.3)}
+      .gb.gb_light{color: rgba(255, 255, 255, 1)}
+      .gb.gb_light.gb_inactive{color: rgba(255, 255, 255, 0.3)}
 
 /*
 =================================================================================================
