--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -1,3 +1,4 @@
+
 /*
 	Gorbeh Icons (v2.0)
 	Created by @setarekarimi and @JavidIzadfar
@@ -120,7 +121,7 @@ Index
 
   /*
   =============================================================================================
-  # 2.4 Animationg
+  # 2.4 Animating
   ---------------------------------------------------------------------------------------------
   */
 
