--- a/postcss/gorbeh-icons.css
+++ b/postcss/gorbeh-icons.css
@@ -9,10 +9,12 @@
 Index
 -------------------------------------------------------------------------------------------------
 
+# 2 ::::::::::::::::: Transformation
 # 3 ::::::::::::::::: Initializations
 
 =================================================================================================
 -------------------------------------------------------------------------------------------------
 */
 
-@import 'partials/gorbeh_initializations.css'
+@import 'partials/gorbeh_transformation.css';
+@import 'partials/gorbeh_initializations.css';
