--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -1,6 +1,6 @@
 
 /*
-	Gorbeh Icons (v2.1)
+	Gorbeh Icons (v2.0)
 	Created by @setarekarimi and @JavidIzadfar
 */
 
@@ -9,9 +9,16 @@
 Index
 -------------------------------------------------------------------------------------------------
 
+# 2 ::::::::::::::::: Transformation
 # 3 ::::::::::::::::: Initializations
 
 =================================================================================================
+-------------------------------------------------------------------------------------------------
+*/
+
+/*
+=================================================================================================
+# 2 Transformation
 -------------------------------------------------------------------------------------------------
 */
 
