--- a/postcss/partials/gorbeh_transformation.css
+++ b/postcss/partials/gorbeh_transformation.css
@@ -3,3 +3,78 @@
 # 2 Transformation
 -------------------------------------------------------------------------------------------------
 */
+/*
+=============================================================================================
+# 2.1 Sizing
+---------------------------------------------------------------------------------------------
+*/
+
+.gb.gb_s18{font-size: 18px}
+
+.gb.gb_s24{font-size: 24px}
+
+.gb.gb_s36{font-size: 36px}
+
+.gb.gb_s48{font-size: 48px}
+
+/*
+=============================================================================================
+# 2.2 Rotating
+---------------------------------------------------------------------------------------------
+*/
+
+.gb.gb_r90{
+   transform: rotate(90deg)}
+
+.gb.gb_r180{
+   transform: rotate(180deg)}
+
+.gb.gb_r270{
+   transform: rotate(270deg)}
+
+/*
+=============================================================================================
+# 2.3 Mirroring
+---------------------------------------------------------------------------------------------
+*/
+
+.gb.gb_mirror{
+   transform: scale(-1, 1)}
+
+/*
+=============================================================================================
+# 2.4 Animating
+---------------------------------------------------------------------------------------------
+*/
+
+.gb.gb_animate_spin{
+   animation-name: gorbeh_spin;
+   animation-duration: 1s;
+   animation-iteration-count: infinite;
+   animation-timing-function: linear}
+
+@-webkit-keyframes gorbeh_spin{
+   from{
+      transform: rotate(0deg)}
+   to{
+      transform: rotate(-359deg)}
+}
+
+@keyframes gorbeh_spin{
+   from{
+      transform: rotate(0deg)}
+   to{
+      transform: rotate(-359deg)}
+}
+
+/*
+=============================================================================================
+# 2.5 Coloring
+---------------------------------------------------------------------------------------------
+*/
+
+.gb.gb_dark{color: rgba(0, 0, 0, 0.54)}
+.gb.gb_dark.gb_inactive{color: rgba(0, 0, 0, 0.26)}
+
+.gb.gb_light{color: rgba(255, 255, 255, 1)}
+.gb.gb_light.gb_inactive{color: rgba(255, 255, 255, 0.3)}
