--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -23,6 +23,96 @@ Index
 */
 
 /*
+=============================================================================================
+# 2.1 Sizing
+---------------------------------------------------------------------------------------------
+*/
+
+.gb.gb_s18{font-size: 18px}
+
+.gb.gb_s24{font-size: 24px}
+
+.gb.gb_s36{font-size: 36px}
+
+.gb.gb_s48{font-size: 48px}
+
+/*
+=============================================================================================
+# 2.2 Rotating
+---------------------------------------------------------------------------------------------
+*/
+
+.gb.gb_r90{
+   -webkit-transform: rotate(90deg);
+           transform: rotate(90deg)}
+
+.gb.gb_r180{
+   -webkit-transform: rotate(180deg);
+           transform: rotate(180deg)}
+
+.gb.gb_r270{
+   -webkit-transform: rotate(270deg);
+           transform: rotate(270deg)}
+
+/*
+=============================================================================================
+# 2.3 Mirroring
+---------------------------------------------------------------------------------------------
+*/
+
+.gb.gb_mirror{
+   -webkit-transform: scale(-1, 1);
+           transform: scale(-1, 1)}
+
+/*
+=============================================================================================
+# 2.4 Animating
+---------------------------------------------------------------------------------------------
+*/
+
+.gb.gb_animate_spin{
+   -webkit-animation-name: gorbeh_spin;
+           animation-name: gorbeh_spin;
+   -webkit-animation-duration: 1s;
+           animation-duration: 1s;
+   -webkit-animation-iteration-count: infinite;
+           animation-iteration-count: infinite;
+   -webkit-animation-timing-function: linear;
+           animation-timing-function: linear}
+
+@-webkit-keyframes gorbeh_spin{
+   from{
+      -webkit-transform: rotate(0deg);
+              transform: rotate(0deg)}
+   to{
+      -webkit-transform: rotate(-359deg);
+              transform: rotate(-359deg)}
+}
+
+@keyframes gorbeh_spin{
+   from{
+      -webkit-transform: rotate(0deg);
+              transform: rotate(0deg)}
+   to{
+      -webkit-transform: rotate(-359deg);
+              transform: rotate(-359deg)}
+}
+
+/*
+=============================================================================================
+# 2.5 Coloring
+---------------------------------------------------------------------------------------------
+*/
+
+.gb.gb_dark{color: rgba(0, 0, 0, 0.54)}
+
+.gb.gb_dark.gb_inactive{color: rgba(0, 0, 0, 0.26)}
+
+.gb.gb_light{color: rgba(255, 255, 255, 1)}
+
+.gb.gb_light.gb_inactive{color: rgba(255, 255, 255, 0.3)}
+
+/*
 =================================================================================================
 # 3 Initializations
 -------------------------------------------------------------------------------------------------
