--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -10,7 +10,12 @@ Index
 -------------------------------------------------------------------------------------------------
 
 # 2 ::::::::::::::::: Transformation
-# 3 ::::::::::::::::: Initializations
+# 2.1 ::::::::::::::::: Sizing
+# 2.2 ::::::::::::::::: Rotating
+# 2.3 ::::::::::::::::: Mirroring
+# 2.4 ::::::::::::::::: Animating
+# 2.5 ::::::::::::::::: Coloring
+# 3 ::::::::::::::::: Icons
 
 =================================================================================================
 -------------------------------------------------------------------------------------------------
@@ -114,7 +119,7 @@ Index
 
 /*
 =================================================================================================
-# 3 Initializations
+# 3 Icons
 -------------------------------------------------------------------------------------------------
 */
 
