--- a/postcss/_icons.css
+++ b/postcss/_icons.css
@@ -1,6 +1,6 @@
 /*
 =================================================================================================
-# 3 Initializations
+# 3 Icons
 -------------------------------------------------------------------------------------------------
 */
 
