Created Icons Class Names via Icon Vars

--- a/postcss/_variables.css
+++ b/postcss/_variables.css
@@ -47,8 +47,8 @@ $gb_var_all_inclusive: '\eb3d';
 $gb_var_all_out: '\e90b';
 $gb_var_android: '\e859';
 $gb_var_announcement: '\e85a';
-$gb_var_aparat::before{content: '\e191';
-$gb_var_apple::before{content: '\e0d6';
+$gb_var_aparat: '\e191';
+$gb_var_apple: '\e0d6';
 $gb_var_apps: '\e5c3';
 $gb_var_archive: '\e149';
 $gb_var_arrow_back: '\e5c4';
@@ -130,7 +130,7 @@ $gb_var_build: '\e869';
 $gb_var_burst_mode: '\e43c';
 $gb_var_business: '\e0af';
 $gb_var_business_center: '\eb3f';
-$gb_var_cafebazaar::before{content: '\e190';
+$gb_var_cafebazaar: '\e190';
 $gb_var_cached: '\e86a';
 $gb_var_cake: '\e7e9';
 $gb_var_call: '\e0b0';
@@ -175,7 +175,7 @@ $gb_var_clear: '\e14c';
 $gb_var_clear_all: '\e0b8';
 $gb_var_close: '\e14c';
 $gb_var_closed_caption: '\e01c';
-$gb_var_cloob::before{content: '\e192';
+$gb_var_cloob: '\e192';
 $gb_var_cloud: '\e2bd';
 $gb_var_cloud_circle: '\e2be';
 $gb_var_cloud_done: '\e2bf';
@@ -291,8 +291,8 @@ $gb_var_exposure_plus_2: '\e3ce';
 $gb_var_exposure_zero: '\e3cf';
 $gb_var_extension: '\e87b';
 $gb_var_face: '\e87c';
-$gb_var_facebook::before{content: '\e157';
-$gb_var_facenama::before{content: '\e1b6';
+$gb_var_facebook: '\e157';
+$gb_var_facenama: '\e1b6';
 $gb_var_fast_forward: '\e01f';
 $gb_var_fast_rewind: '\e020';
 $gb_var_favorite: '\e87d';
@@ -387,10 +387,10 @@ $gb_var_gavel: '\e90e';
 $gb_var_gesture: '\e155';
 $gb_var_get_app: '\e2c4';
 $gb_var_gif: '\e908';
-$gb_var_github::before{content: '\e0be';
+$gb_var_github: '\e0be';
 $gb_var_golf_course: '\eb45';
-$gb_var_google_play::before{content: '\e0d8';
-$gb_var_google_plus::before{content: '\e159';
+$gb_var_google_play: '\e0d8';
+$gb_var_google_plus: '\e159';
 $gb_var_gps_fixed: '\e1b3';
 $gb_var_gps_not_fixed: '\e1b4';
 $gb_var_gps_off: '\e1b5';
@@ -442,7 +442,7 @@ $gb_var_insert_emoticon: '\e7f2';
 $gb_var_insert_invitation: '\e878';
 $gb_var_insert_link: '\e250';
 $gb_var_insert_photo: '\e251';
-$gb_var_instagram::before{content: '\e15c';
+$gb_var_instagram: '\e15c';
 $gb_var_invert_colors: '\e891';
 $gb_var_invert_colors_off: '\e0c4';
 $gb_var_iranapps: '\e254';
@@ -474,7 +474,7 @@ $gb_var_layers_clear: '\e53c';
 $gb_var_leak_add: '\e3f8';
 $gb_var_leak_remove: '\e3f9';
 $gb_var_lens: '\e3a6';
-$gb_var_lenzor::before{content: '\e193';
+$gb_var_lenzor: '\e193';
 $gb_var_library_add: '\e02e';
 $gb_var_library_books: '\e02f';
 $gb_var_library_music: '\e030';
@@ -484,7 +484,7 @@ $gb_var_line_weight: '\e91a';
 $gb_var_linear_scale: '\e260';
 $gb_var_link: '\e250';
 $gb_var_linked_camera: '\e438';
-$gb_var_linkedin::before{content: '\e0bf';
+$gb_var_linkedin: '\e0bf';
 $gb_var_list: '\e896';
 $gb_var_live_help: '\e0c6';
 $gb_var_live_tv: '\e639';
@@ -570,7 +570,7 @@ $gb_var_multiline_chart: '\e6df';
 $gb_var_music_note: '\e3a1';
 $gb_var_music_video: '\e063';
 $gb_var_my_location: '\e1b3';
-$gb_var_myket::before{content: '\e252';
+$gb_var_myket: '\e252';
 $gb_var_nature: '\e406';
 $gb_var_nature_people: '\e407';
 $gb_var_navigate_before: '\e314';
@@ -855,7 +855,7 @@ $gb_var_tablet_android: '\e330';
 $gb_var_tablet_mac: '\e331';
 $gb_var_tag_faces: '\e7f2';
 $gb_var_tap_and_play: '\e62b';
-$gb_var_telegram::before{content: '\e1a5';
+$gb_var_telegram: '\e1a5';
 $gb_var_terrain: '\e3df';
 $gb_var_text_fields: '\e262';
 $gb_var_text_format: '\e165';
@@ -893,7 +893,7 @@ $gb_var_tune: '\e429';
 $gb_var_turned_in: '\e866';
 $gb_var_turned_in_not: '\e867';
 $gb_var_tv: '\e333';
-$gb_var_twitter::before{content: '\e0cd';
+$gb_var_twitter: '\e0cd';
 $gb_var_unarchive: '\e169';
 $gb_var_undo: '\e166';
 $gb_var_unfold_less: '\e5d6';
@@ -954,7 +954,7 @@ $gb_var_widgets: '\e1bd';
 $gb_var_wifi: '\e63e';
 $gb_var_wifi_lock: '\e1e1';
 $gb_var_wifi_tethering: '\e1e2';
-$gb_var_windows::before{content: '\e0d5';
+$gb_var_windows: '\e0d5';
 $gb_var_work: '\e8f9';
 $gb_var_wrap_text: '\e25b';
 $gb_var_youtube_searched_for: '\e8fa';
