Added font path

--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -9,6 +9,8 @@
 Index
 -------------------------------------------------------------------------------------------------
 
+# 1 ::::::::::::::::: Declarations
+# 1.1 ::::::::::::::::: Path
 # 2 ::::::::::::::::: Transformation
 # 2.1 ::::::::::::::::: Sizing
 # 2.2 ::::::::::::::::: Rotating
@@ -20,6 +22,30 @@ Index
 =================================================================================================
 -------------------------------------------------------------------------------------------------
 */
+
+/*
+=================================================================================================
+# 1 Declarations
+-------------------------------------------------------------------------------------------------
+*/
+
+/*
+=============================================================================================
+# 1.1 Path
+---------------------------------------------------------------------------------------------
+*/
+
+@font-face{
+    font-family: 'Gorbeh Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/Gorbeh-Regular.eot');
+    src: url('../fonts/Gorbeh-Regular.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Gorbeh-Regular.otf') format("opentype"),
+         url('../fonts/Gorbeh-Regular.woff2') format('woff2'),
+         url('../fonts/Gorbeh-Regular.woff') format('woff'),
+         url('../fonts/Gorbeh-Regular.ttf')  format('truetype'),
+         url('../fonts/Gorbeh-Regular.svg#svgFontName') format('svg')}
 
 /*
 =================================================================================================
