--- a/postcss/gorbeh-icons.css
+++ b/postcss/gorbeh-icons.css
@@ -9,6 +9,8 @@
 Index
 -------------------------------------------------------------------------------------------------
 
+# 1 ::::::::::::::::: Declarations
+# 1.1 ::::::::::::::::: Path
 # 2 ::::::::::::::::: Transformation
 # 2.1 ::::::::::::::::: Sizing
 # 2.2 ::::::::::::::::: Rotating
@@ -22,6 +24,8 @@ Index
 */
 
 @import '_variables.css';
+
+@import '_path.css';
 
 @import '_sizing.css';
 @import '_rotating.css';
