Changed All Gorbeh prefixes to variable

--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -45,7 +45,7 @@ Index
          url('../fonts/Gorbeh-Regular.woff2') format('woff2'),
          url('../fonts/Gorbeh-Regular.woff') format('woff'),
          url('../fonts/Gorbeh-Regular.ttf')  format('truetype'),
-         url('../fonts/Gorbeh-Regular.svg#svgFontName') format('svg')}
+         url('../fonts/Gorbeh-Regular.svg#GorbehIconsRegular') format('svg')}
 
 /*
 =================================================================================================
