--- a/postcss/_mirroring.css
+++ b/postcss/_mirroring.css
@@ -4,5 +4,5 @@
 ---------------------------------------------------------------------------------------------
 */
 
-.gb.$(gb_prefix)_mirror{
+.$(gb_prefix).$(gb_prefix)_mirror{
    transform: scale(-1, 1)}
