--- a/postcss/_sizing.css
+++ b/postcss/_sizing.css
@@ -9,10 +9,10 @@
 ---------------------------------------------------------------------------------------------
 */
 
-.gb.$(gb_prefix)_s18{font-size: 18px}
+.$(gb_prefix).$(gb_prefix)_s18{font-size: 18px}
 
-.gb.$(gb_prefix)_s24{font-size: 24px}
+.$(gb_prefix).$(gb_prefix)_s24{font-size: 24px}
 
-.gb.$(gb_prefix)_s36{font-size: 36px}
+.$(gb_prefix).$(gb_prefix)_s36{font-size: 36px}
 
-.gb.$(gb_prefix)_s48{font-size: 48px}
+.$(gb_prefix).$(gb_prefix)_s48{font-size: 48px}
