--- a/css/gorbeh-icons.css
+++ b/css/gorbeh-icons.css
@@ -11,6 +11,7 @@ Index
 
 # 1 ::::::::::::::::: Declarations
 # 1.1 ::::::::::::::::: Path
+# 1.2 ::::::::::::::::: Core
 # 2 ::::::::::::::::: Transformation
 # 2.1 ::::::::::::::::: Sizing
 # 2.2 ::::::::::::::::: Rotating
@@ -46,6 +47,39 @@ Index
          url('../fonts/Gorbeh-Regular.woff') format('woff'),
          url('../fonts/Gorbeh-Regular.ttf')  format('truetype'),
          url('../fonts/Gorbeh-Regular.svg#GorbehIconsRegular') format('svg')}
+
+/*
+=============================================================================================
+# 1.2 Core
+---------------------------------------------------------------------------------------------
+*/
+
+.gb{
+   font-family: 'Gorbeh Icons';
+   display: -webkit-inline-box;
+   display: -ms-inline-flexbox;
+   display: inline-flex;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
+   vertical-align: middle;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 1;
+   font-size: inherit;
+   text-rendering: auto;
+   -webkit-font-kerning: auto;
+           font-kerning: auto;
+   -webkit-font-feature-settings: normal;
+           font-feature-settings: normal;
+   -webkit-font-language-override: normal;
+           font-language-override: normal;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+}
 
 /*
 =================================================================================================
