--- a/postcss/_animating.css
+++ b/postcss/_animating.css
@@ -4,11 +4,13 @@
 ---------------------------------------------------------------------------------------------
 */
 
-.$(gb_prefix).$(gb_prefix)_animate_spin{
-   animation-name: gorbeh_spin;
-   animation-duration: $gb_animate_spin_duration;
-   animation-iteration-count: infinite;
-   animation-timing-function: linear}
+  .$(gb_prefix){
+    &.$(gb_prefix)_animate_spin{
+       animation-name: gorbeh_spin;
+       animation-duration: $gb_animate_spin_duration;
+       animation-iteration-count: infinite;
+       animation-timing-function: linear}
+  }
 
 @keyframes gorbeh_spin{
    from{
