--- a/postcss/_rotating.css
+++ b/postcss/_rotating.css
@@ -4,11 +4,13 @@
 ---------------------------------------------------------------------------------------------
 */
 
-.$(gb_prefix).$(gb_prefix)_r90{
-   transform: rotate(90deg)}
+  .$(gb_prefix){
+    &.$(gb_prefix)_r90{
+       transform: rotate(90deg)}
 
-.$(gb_prefix).$(gb_prefix)_r180{
-   transform: rotate(180deg)}
+    &.$(gb_prefix)_r180{
+       transform: rotate(180deg)}
 
-.$(gb_prefix).$(gb_prefix)_r270{
-   transform: rotate(270deg)}
+    &.$(gb_prefix)_r270{
+       transform: rotate(270deg)}
+  }
