--- a/postcss/_variables.css
+++ b/postcss/_variables.css
@@ -958,6 +958,7 @@ $gb_var_wifi_tethering: '\e1e2';
 $gb_var_windows: '\e0d5';
 $gb_var_work: '\e8f9';
 $gb_var_wrap_text: '\e25b';
+$gb_var_youtube: '\e63b';
 $gb_var_youtube_searched_for: '\e8fa';
 $gb_var_zoom_in: '\e8ff';
 $gb_var_zoom_out: '\e900';
